--- a/frontend/static/css/components/comments.css
+++ b/frontend/static/css/components/comments.css
@@ -12,6 +12,16 @@
         padding-left: 20px;
     }
 
+    @media only screen and (max-width : 570px) {
+        .replies .replies {
+            padding-left: 0;
+        }
+
+        .replies-indent-normal {
+            padding-left: 5px;
+        }
+    }
+
 .comment-form {
     width: 100%;
 }
@@ -116,7 +126,7 @@
     }
 
         .comment:hover .thread-ruler {
-            opacity: 0.5;
+            opacity: 0.4;
         }
 
         .comment-side:hover .thread-ruler,
@@ -214,6 +224,13 @@
 
         .comment-side .thread-ruler {
             top: 51px;
+        }
+
+        @media only screen and (max-width : 570px) {
+            .comment-side-avatar {
+                width: 36px;
+                height: 36px;
+            }
         }
 
     .comment-header {
